classDiagram
  class multimodal-rl {
  }
  class main {
  }
  class sumo_mmrl {
  }
  class agent {
  }
  class agent {
  }
  class dqn {
  }
  class exploration {
  }
  class memory {
  }
  class environment {
  }
  class bus_stop {
  }
  class connect {
  }
  class env {
  }
  class net_parser {
  }
  class observation {
  }
  class outmask {
  }
  class person {
  }
  class person_manager {
  }
  class plot_util {
  }
  class reward_calculator {
  }
  class ride_select {
  }
  class stage_manager {
  }
  class step_manager {
  }
  class utils {
  }
  class vehicle {
  }
  class vehicle_manager {
  }
  class sumo_opotimize {
  }
  class utilities {
  }
  class env_utils {
  }
  class plot_util {
  }
  class utils {
  }
  main --> sumo_mmrl
  main --> sumo_opotimize
  sumo_mmrl --> agent
  sumo_mmrl --> dqn
  sumo_mmrl --> connect
  sumo_mmrl --> env
  sumo_mmrl --> plot_util
  sumo_mmrl --> utils
  agent --> dqn
  env --> bus_stop
  env --> connect
  env --> net_parser
  env --> observation
  env --> outmask
  env --> person_manager
  env --> reward_calculator
  env --> ride_select
  env --> stage_manager
  env --> step_manager
  env --> vehicle_manager
  observation --> outmask
  person_manager --> person
  vehicle_manager --> vehicle
